--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ TrafficLight_hw/TrafficLight.dia.autosave
 TrafficLight_hw/TrafficLight.kicad_pcb-bak
 TrafficLight_fw/.settings/language.settings.xml
 TrafficLight_fw/.settings/org.eclipse.cdt.codan.core.prefs
+
+TrafficLight_hw/TrafficLight.csv
